Modificacion del index

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -19,7 +19,7 @@
         <div class="navbar">              
             <div class="logo">
             <img src="../image/logo.png" alt="logo">
-            <a href="#"> Marine life </a>
+            <a href="../index.html"> Marine life </a>
                 
         </div>
         <ul class="links">
