--- a/html/servicios.html
+++ b/html/servicios.html
@@ -19,7 +19,7 @@
         <div class="navbar">              
             <div class="logo">
             <img src="../image/logo.png" alt="logo">
-            <a href="#"> Marine life </a>
+            <a href="../index.html"> Marine life </a>
                 
         </div>
         <ul class="links">
@@ -48,7 +48,15 @@
 
     </header>
     <main>
-
+        <section class="galeria">
+            <img src="../image/Img1.jpeg" alt="Imagen1">
+            <img src="../image/img2.jpeg" alt="Imagen2">
+            <img src="../image/img3.jpeg" alt="Imagen3">
+            <img src="../image/img4.jpeg" alt="Imagen4">
+            <img src="../image/img5.jpeg" alt="Imagen5">
+            <img src="../image/img6.jpeg" alt="Imagen6">
+            <img src="../image/img7.jpeg" alt="Imagen7">          
+        </section>
     </main>
     <footer>
             
