Galeria de fotos agregada

--- a/html/servicios.html
+++ b/html/servicios.html
@@ -47,15 +47,17 @@
         </div>
 
     </header>
-    <main>
+    <main class="main_galeria">
+        <section class="titulo_galeria">
+            <h1>Nuestro espacio</h1>
+        </section>
         <section class="galeria">
             <img src="../image/Img1.jpeg" alt="Imagen1">
             <img src="../image/img2.jpeg" alt="Imagen2">
             <img src="../image/img3.jpeg" alt="Imagen3">
             <img src="../image/img4.jpeg" alt="Imagen4">
             <img src="../image/img5.jpeg" alt="Imagen5">
-            <img src="../image/img6.jpeg" alt="Imagen6">
-            <img src="../image/img7.jpeg" alt="Imagen7">          
+            <img src="../image/img6.jpeg" alt="Imagen6">     
         </section>
     </main>
     <footer>
