Haciendo arreglos en el footer

--- a/html/servicios.html
+++ b/html/servicios.html
@@ -46,7 +46,7 @@
     </header>
     <main >      
         <section class="container galeria">
-            <h1 class="col-12">Galeria</h1>
+            <h1 class="col-10 col-md-12">Galeria</h1>
             <p> </p>
             <div class="col-10 col-md-12 imagenes">
             <img src="../image/Img1.jpeg" alt="Imagen1">
