--- a/html/contacto.html
+++ b/html/contacto.html
@@ -51,8 +51,41 @@
 
     </main>
     <footer>
-            
-    </footer>
+        <section class=" container pie">
+          <div class="contacto col-4">
+              <h2>CONTACTO</h1>
+              <section class="telefono">
+                  <img src="../image/Logo Telefono.png" alt="Logo Telefono">
+                  <P>Numero de Telefono: 1120878707</P>
+              </section>
+              <section class="mail">
+                  <img src="../image/Logo Mail.png" alt="">
+                  <p>Mail:ayalaluis638@gmail.com</p>
+              </section>           
+          </div>
+          <div class="redes col-4">
+              <h2>Redes sociales</h2>
+              <section class="facebook">
+                  <img src="../image/Facebook.png" alt="Facebook">
+                  <p><a href="https://www.facebook.com/profile.php?id=61556141908749&is_tour_dismissed=true" target="_blank">Facebook</a></p>
+              </section>
+              <section class="instagram">
+                  <img src="../image/Instagram.png" alt="Instagram">
+                  <p><a href="https://www.instagram.com/_lucho_ayala/"target="_blank" >Instagram</a></p>
+              </section>
+          </div>
+          <div class="ubicacion col-4"> 
+              <div class="titulo_ubicacion">
+                  <img src="../image/ubicacion.png" alt="Logo Ubicacion"> 
+                  <h2>Ubicacion</h2>
+              </div>   
+              <div class="padre_mapa">  
+                  <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.6719626867566!2d-58.2112983885136!3d-34.7638553727842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32f4b0ecdf4e7%3A0x1b58f856c0a0b4ea!2sBerazategui!5e0!3m2!1ses-419!2sar!4v1706727267887!5m2!1ses-419!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>    
+          </div>
+        </section>  
+  
+      </footer>
     <script>
         function PlayAudio() {
             document.getElementById("musica").play();
