--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="ubicacion col-4"> 
               <div class="titulo_ubicacion">
                   <img src="image/ubicacion.png" alt="Logo Ubicacion"> 
-                  <h2>Ubicacionn</h2>
+                  <h2>Ubicacion</h2>
               </div>   
               <div class="padre_mapa">  
                   <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.6719626867566!2d-58.2112983885136!3d-34.7638553727842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32f4b0ecdf4e7%3A0x1b58f856c0a0b4ea!2sBerazategui!5e0!3m2!1ses-419!2sar!4v1706727267887!5m2!1ses-419!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
